--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ dist/
 lib/
 node_modules/
 typechain/
-
+.history/
+deployment/history
 # files
 *.env
 *.log
@@ -19,3 +20,5 @@ coverage.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.DS_Store
+*.bak
