--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "typechain/**/*",
     "types/**/*",
     "hardhat.config.ts",
-    "utils/**/*"
+    "utils/**/*",
+    "deployment/contract-names.ts"
   ]
 }
