--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://inverse.finance"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@openzeppelin/contracts": "^4.0.0"
   },
   "devDependencies": {
